prevent jumping

--- a/assets/stylesheets/application.css.styl
+++ b/assets/stylesheets/application.css.styl
@@ -130,7 +130,7 @@ article {
     }
 
     p.points {
-      min-height: 100px
+      min-height: 105px
     }
   }
 }
